codepot/src/css/issue.css
/*---------------------------------------------
 * issue home
 *---------------------------------------------*/
#issue_home_mainarea_result {
	overflow: auto;
}

#issue_home_mainarea_result_table {
	padding-top: 1em;
	/*border-collapse: separate;
	border-spacing: 0px 1px;*/
	width: 100%;
	font-size: inherit;
}

#issue_home_mainarea_result_table th {
	padding-top: 3px;
	padding-bottom: 3px;
}

#issue_home_mainarea_result_table td {
	padding-top: 3px;
	padding-bottom: 3px;
}

#issue_home_mainarea_result_table tr.new {
	background-color: #ffccbb;
}

#issue_home_mainarea_result_table tr.accepted {
}

#issue_home_mainarea_result_table tr.rejected {
	background-color: #ffeedd;
}

#issue_home_mainarea_result_table tr.started {
	background-color: #ddeeff;
}

#issue_home_mainarea_result_table tr.stalled {
	background-color: #bbccff;
}

#issue_home_mainarea_result_table tr.resolved {
	background-color: #ddffdd;
}

#issue_home_mainarea_result_table tr.other {
	background-color: #ddeeff;
}

#issue_home_mainarea_result_table td.pages {
        padding-top: 1em;
        text-align: center;
        font-weight: bold;
}

#issue_home_mainarea_result_table td.id {
	white-space: nowrap;
	width: 1px;
}

#issue_home_mainarea_result_table td.type {
	white-space: nowrap;
	width: 1px;
}

#issue_home_mainarea_result_table td.status {
	white-space: nowrap;
	width: 1px;
}

#issue_home_mainarea_result_table td.priority {
	white-space: nowrap;
	width: 1px;
}

#issue_home_mainarea_result_table td.owner {
	white-space: nowrap;
	width: 1px;
}

#issue_home_mainarea_result_table td.summary {
	white-space: nowrap;
}

#issue_home_mainarea_search_form {
}

#issue_home_mainarea_search_form div {
	padding: 0.2em;
}

/*---------------------------------------------
 * issue show
 *---------------------------------------------*/
#issue_show_mainarea_change_form {
}

#issue_show_mainarea_change_form div {
	padding: 0.2em;
}

#issue_show_mainarea_change_form textarea {
	display: block;
	padding: 1px;
	font-size: inherit;
	font-family: monospace;
	width: 100%;
}

#issue_show_mainarea_changes {
	margin-top: 1em;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	overflow: auto;
}

#issue_show_mainarea_changes .infostrip {
	margin-bottom: 0.5em;
}

#issue_show_mainarea_changes .infostrip .title {
	float: left;
}

#issue_show_mainarea_changes_table {
	border-collapse: collapse;
	width: 100%;
	font-size: inherit;
}

#issue_show_mainarea_changes_table td.date {
	width: 1px;
	white-space: nowrap;
	vertical-align: top;
	padding-top: 0.2em;
	padding-bottom: 0.2em;
	border-bottom: 1px solid lightgray;
}

#issue_show_mainarea_changes_table td.updater {
	width: 1px;
	white-space: nowrap;
	vertical-align: top;
	padding-top: 0.2em;
	padding-bottom: 0.2em;
	border-bottom: 1px solid lightgray;
}

#issue_show_mainarea_changes_table td.details {
	white-space: nowrap;
	vertical-align: top;
	padding-top: 0.2em;
	padding-bottom: 0.2em;
	border-bottom: 1px solid lightgray;
	overflow: auto;
}

#issue_show_mainarea_changes_table td.details .list {
	background-color: #F1F1FF;
}

#issue_show_mainarea_changes_table td.details .list ul li {
	padding-bottom: 0.3em;
}

/*---------------------------------------------
 * issue edit
 *---------------------------------------------*/
#issue_edit_mainarea_type {
	padding-bottom: 0.3em;
}

#issue_edit_mainarea form textarea {
	display: block;
	padding: 1px;
	font-size: inherit;
	font-family: monospace;
	width: 100%;
}

#project_issue_summary {
	width: 100%;
}

#issue_edit_mainarea_buttons {
	padding-top: 0.5em;
}

